Fixed overflowing messages on home - Mobile Only

--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -173,7 +173,7 @@ body {
     }
 
     #messageGreetCycle {
-        font-size: 3.5em;
+        font-size: 3em;
     }
 }
 
